		of the filter.
	Added --smart-filter and --smart-filter-instance options 
	        to the next and prev commands.
	Added M-C-n and M-C-p keybindings to "move to next message 
	        matching current" and "move to previous message 
		matching current"
	Added variables edit:maxfillcols and edit:maxwrapcols which 
	        will limit how wide editing paragraphs may get before
		they get wrapped.  Default is 70 columns each.
	Added smartzpunt command with key binding of "C-x k".
	        This starts a zpunt command filled in with 
		the proposed zpunt.
	Fixed a memory reference bug in delete and undelete commands.
	Added support for perl to call directly back into owl.
	Changed the implementation of owl::command("...") to immediately
	        call back into owl.  This allows perl to get the return
		value of strings returned by owl commands.
	Added the getview command which returns the name of the current 
	        view's filter.  
	Added the getvar command which returns the value of a variable.
	Added an example to examples/owlconf.erik which uses TAB to 
		narrow and restore the view.  
	Added an example to examples/owlconf.erik which uses M-c to 
		color messages matching the current one green.
	
1.2.0-pre-erikdevel-17
	Integrated change to fix problem with popup blinking on new zephyrs.
	C-l and resizes will now refresh an open viewwin (eg, help).
	Updated doc/code.txt to include info about filters, commands,
	        contexts, and keybindings.
	Ooops.  "delete view" had accidentally been misbound to M-d.
	        Switched the binding back to M-D.
	Exec commands cleaned up to not have buffer-size limitations
	        and to not mess up spaces.  exec also returns a string
		of the output now.
	
1.2.0-pre-erikdevel-16
	Integrated changes from 1.1.3, and added docs for "zlocate -d"
		and new show commands.
	Show with arguments produces help on show.
	Fix a bug in readconfig caught by efence (where we'd try to read before 